# fuzzyregion

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/fuzzyregion-core/: Cargo.toml
crates/fuzzyregion-core/src/: alpha.rs  engine.rs  error.rs  fuzzyregion.rs  level.rs  lib.rs
crates/fuzzyregion-pg/: Cargo.toml  fuzzyregion.control
crates/fuzzyregion-pg/.cargo/: config.toml
crates/fuzzyregion-pg/src/: api.rs  interop.rs  lib.rs  sql_type.rs  storage.rs
crates/fuzzyregion-pg/tests/sql/: pg18_smoke.sql
examples/demo-data/po_valley_tree_cover_transition/: high_tree_alpha_0_2.geojson  high_tree_alpha_0_4.geojson  high_tree_alpha_0_6.geojson  moderate_tree_alpha_0_2.geojson  moderate_tree_alpha_0_4.geojson  moderate_tree_alpha_0_6.geojson
initdb/: 10_fuzzyregion_demo.sql  20_fuzzyregion_demo.sql
scripts/: install-postgres-extension.sh  load-tree-cover-transition-demo.sh  prepare-tree-cover-transition-demo.sh  run_demo.py  test-postgres.sh  tests.sh
