[workspace]
members = [
    "crates/fuzzyregion-core",
    "crates/fuzzyregion-pg",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
